--- a/nginx-app/deployment.yaml
+++ b/nginx-app/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: nginx:latest
+          image: nginx:1.25.1
           ports:
             - containerPort: 80
 
